# arabidopsis-api-tair

./: README.md  tair_arabidopsis_access.py
sample_data/: AGI2uniprot-JAN2023.txt  AGI2uniprot-Jul2023.txt  TAIR2UniprotMapping-JAN2023.txt  TAIR2UniprotMapping-Jul2023.txt  Uniprot2AGI-JAN2023.txt  Uniprot2AGI-Jul2023.txt
tair_conversion/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
tair_conversion/docs/: Makefile  conf.py  example.ipynb  make.bat
tair_conversion/src/tair_conversion/: __init__.py
tair_conversion/tests/: test_tair_conversion.py
