[tool.poetry]
name = "tair_conversion"
version = "0.1.0"
description = "A python package to make the tair conversion accessible in the form of the nested dictionary and tuples for easy searching and without making a sql database at the hand. It will automatically download the required files and then will remove them after searching your required accession across the AGI, Arabport, Uniprot and giving you all the information for those releavant accessions."
authors = ["Gaurav Sablok"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
